--- a/core/app/views/Shipments/_show_items.html
+++ b/core/app/views/Shipments/_show_items.html
@@ -1,206 +1,205 @@
-<!-- 运输项目部分 -->
-<div class="row-fluid">
-  <div class="span12 alert">
-    <h4 data-toggle="toggle" data-target="#tl">Timeline <i class="icon-reorder"></i></h4>
+<!-- 运输项目部分
+<div class="box box-warning box-solid">
+  <div class="box-header"><h3 class="box-title" data-toggle="toggle" data-target="#tl">Timeline
+    <i class="icon-reorder"></i></h3></div>
+  <div class="box-body">
+    <div id="tl" class="col-sm-12" style="height:350px;"></div>
   </div>
 </div>
-<div class="row-fluid">
-  <div id="tl" class="span12" style="height:350px;"></div>
-</div>
-
-#{success_row title:'运输项目' /}
-<form action="@{ShipItems.adjust()}" method="POST" id="adjust_ship_items">
-  <div class="row-fluid">
-    <div class="span12">
+-->
+<div class="box box-success box-solid">
+  <div class="box-header"><h3 class="box-title">运输项目</h3></div>
+  <form action="@{ShipItems.adjust()}" method="POST" id="adjust_ship_items" class="form-inline">
+    <div class="box-body">
     #{if ship.projectName == models.User.COR.MengTop}
         #{render './_b2b_shipitem.html', isExpress: java.util.Arrays.asList('EXPRESS','DEDICATED').contains(ship.type.name()),
         items: ship.items, itmRecord: true/}
     #{/if}
-      #{else }
+    #{else }
         #{render './_shipitem.html', isExpress: java.util.Arrays.asList('EXPRESS','DEDICATED').contains(ship.type.name()),
         items: ship.items, itmRecord: true/}
     #{/else}
     </div>
-  </div>
-#{power.ck 'shipitems.adjust'}
-<div class="row-fluid">
-  <div class="span3">
-    <input type="text" name="targetId" placeholder="ShipmentId" style="margin-bottom:0">
-    <input type="hidden" name="shipmentId" value="${ship.id}">
-    <div class="btn-group">
-      <a class="btn preview"><i class="icon-file-alt"></i> 预览</a>
-      <a class="btn btn-success adjust" data-disable-with='调整中...' data-confirm="确认调整?">
-        <i class="icon-adjust"></i>调整</a>
-    </div>
-  </div>
-#{/power.ck}
-  <div class="span9" id="preview">
-  </div>
-</div>
-</form>
-
-<!-- 隐藏 Model -->
-<div class="modal hide fade" id="logForm">
-  <form action="@{Shipments.log(ship.id)}" method="POST">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal">×</button>
-      <h4>记录运输状态事件</h4>
-    </div>
-    <div class="modal-body row-fluid">
-      <label>事件:</label>
-      <textarea role="5" name="msg" class="span11"></textarea>
-    </div>
-    <div class="modal-footer">
-      <a href="#" class="btn" data-dismiss="modal">Close</a>
-      <button href="#" class="btn btn-primary" data-disable-with="更新中..." data-confirm="确认操作?">
-        记录
-      </button>
-    </div>
-  </form>
-</div>
-
-<div class="modal hide fade" id="popLogModel"></div>
-<script type="text/template" id='form-logreceive-qty-model-template'>
-  <form action="<%= url %>" data-method='PUT' method="POST">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal">×</button>
-      <h4>手动修改入库数量</h4>
-    </div>
-    <div class="modal-body row-fluid">
-      <table>
-        <tr>
-          <td>
-            <label>数量</label>
-
-            <div class=" input-append">
-              <input type="text" class="input-mini" name="qty" value="<%= qty %>">
-              <span class="add-on">当前入库数量 <%= qty %></span>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class=" input-append">
-              <span class="add-on">赔偿类型</span>
-              <select name="compentype" id="compentype" class="inline" style="width:110px;">
-                <option value="" selected="selected">选择</option>
-                <option value="amazon">Amazon</option>
-                <option value="${models.OperatorConfig.getVal("addressname")}">${models.OperatorConfig.getVal("addressname")}</option>
-                <option value="other">Other</option>
-              </select>
-              <span class="add-on" style="margin-left:100px;">丢失量</span>
-              <input type="text" class="input-mini" name="lossqty" value=<%= lossqty %> >
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="input-append">
-              <span class="add-on">赔偿金额</span>
-              <input type="text" class="input-mini" name="compenamt" value=<%= compenamt %>>
-              <select name="currency" id="currency" class="inline" style="width:100px;">
-              #{list items:helper.Currency.values(), as: 'c'}
-                <option value="${c}">${c}</option>
-              #{/list}
-              </select>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <label>备注:</label>
-            <textarea role="5" name="msg" class="span12"></textarea>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <div class="modal-footer">
-      <a href="#" class="btn" data-dismiss="modal">Close</a>
-    #{power.ck "shipitems.received"}
-      <button href="#" class="btn btn-primary" data-disable-with="更新中..." data-confirm="确认操作?">
-        修改
-      </button>
+    <div class="box-footer">
+    #{power.ck 'shipitems.adjust'}
+      <input type="text" name="targetId" placeholder="ShipmentId" style="margin-bottom:0" class="form-control">
+      <input type="hidden" name="shipmentId" value="${ship.id}">
+      <div class="btn-group">
+        <a class="btn btn-default preview"><i class="icon-file-alt"></i> 预览</a>
+        <a class="btn btn-success adjust" data-disable-with='调整中...' data-confirm="确认调整?">
+          <i class="icon-adjust"></i>调整</a>
+      </div>
+     
+      <div class="row" id="preview"></div>
     #{/power.ck}
     </div>
   </form>
+</div>
+
+
+<!-- 隐藏 Model -->
+<div class="modal fade" id="logForm">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <form action="@{Shipments.log(ship.id)}" method="POST">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h4>记录运输状态事件</h4>
+        </div>
+        <div class="modal-body row-fluid">
+          <label>事件:</label>
+          <textarea role="5" name="msg" class="span11"></textarea>
+        </div>
+        <div class="modal-footer">
+          <a href="#" class="btn" data-dismiss="modal">Close</a>
+          <button href="#" class="btn btn-primary" data-disable-with="更新中..." data-confirm="确认操作?">
+            记录
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div id="popLogModel" class="modal fade" role="dialog"></div>
+
+<script type="text/template" id='form-logreceive-qty-model-template'>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <form action="<%= url %>" data-method='PUT' method="POST">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h4>手动修改入库数量</h4>
+        </div>
+        <div class="modal-body row-fluid">
+          <table>
+            <tr>
+              <td>
+                <label>数量</label>
+
+                <div class=" input-append">
+                  <input type="text" class="input-mini" name="qty" value="<%= qty %>">
+                  <span class="add-on">当前入库数量 <%= qty %></span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class=" input-append">
+                  <span class="add-on">赔偿类型</span>
+                  <select name="compentype" id="compentype" class="inline" style="width:110px;">
+                    <option value="" selected="selected">选择</option>
+                    <option value="amazon">Amazon</option>
+                    <option value="${models.OperatorConfig.getVal("addressname")}">${models.OperatorConfig.getVal("addressname")}</option>
+                    <option value="other">Other</option>
+                  </select>
+                  <span class="add-on" style="margin-left:100px;">丢失量</span>
+                  <input type="text" class="input-mini" name="lossqty" value=<%= lossqty %> >
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="input-append">
+                  <span class="add-on">赔偿金额</span>
+                  <input type="text" class="input-mini" name="compenamt" value=<%= compenamt %>>
+                  <select name="currency" id="currency" class="inline" style="width:100px;">
+                  #{list items:helper.Currency.values(), as: 'c'}
+                    <option value="${c}">${c}</option>
+                  #{/list}
+                  </select>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label>备注:</label>
+                <textarea role="5" name="msg" class="span12"></textarea>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <a href="#" class="btn" data-dismiss="modal">Close</a>
+        #{power.ck "shipitems.received"}
+          <button href="#" class="btn btn-primary" data-disable-with="更新中..." data-confirm="确认操作?">
+            修改
+          </button>
+        #{/power.ck}
+        </div>
+      </form>
+    </div>
+  </div>
 </script>
 
 <script type="text/template" id='form-logfee-model-template'>
-  <form action="<%= url %>" method="POST" class="form-horizontal">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal">×</button>
-      <h4>添加运输项目 <%= itm.id %> 费用</h4>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <form action="<%= url %>" method="POST" class="form-horizontal">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h4 class="modal-title">添加运输项目 <%= itm.id %> 费用</h4>
+        </div>
+        <div class="modal-body row-fluid">
+          <div class="form-group">
+            <label class="col-sm-2 control-label">单价</label>
+            <div class="col-sm-4">
+              <input name="fee.unitPrice" type="number" step="any" class="form-control" value="1">
+            </div>
+            <label class="col-sm-2 control-label">币种</label>
+            <div class="col-sm-4">
+              <select class="form-control" name="fee.currency">
+              #{list items:helper.Currency.values(), as:'t'}
+                <option value="${t.name()}" #{if t.name()=='CNY'} selected #{/if}>${t.name()}</option>
+              #{/list}
+              </select>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">数量</label>
+            <div class="col-sm-4">
+              <input name="fee.unitQty" type="number" step="any" class="form-control" value="1">
+            </div>
+            <label class="col-sm-2 control-label">总价</label>
+            <div class="col-sm-4">
+              <input type="number" step="any" class="form-control amount" value="0" readonly>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">计费方式</label>
+            <div class="col-sm-4">
+              <select name="fee.chargingWay" class="form-control">
+              #{list items:models.finance.PaymentUnit.W.values(), as:'way'}
+                <option value="${way}">${way.label()}</option>
+              #{/list}
+              </select>
+            </div>
+            <label class="col-sm-2 control-label">费用关系人</label>
+            <div class="col-sm-4">
+              <select name="fee.cooperator.id" class="form-control">
+              #{list items:cooperators, as:'cooper'}
+                <option ${ship?.cooper == cooper ? 'selected' : ''}  value="${cooper.id}">${cooper.name}</option>
+              #{/list}
+              </select>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">备注</label>
+            <div class="col-sm-10">
+              <textarea role="5" name="fee.memo" class="form-control"></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <a href="#" class="btn btn-default" data-dismiss="modal">Close</a>
+          <button class="btn btn-primary" data-disable-with="更新中..." data-confirm="确认操作?">
+            添加
+          </button>
+        </div>
+      </form>
     </div>
-    <div class="modal-body row-fluid">
-      <div class="control-group">
-        <label class="control-label">币种</label>
-
-        <div class="controls">
-        #{select 'fee.currency', items:helper.Currency.values(), class: 'input-small', value: 'CNY'}#{/select}
-        </div>
-      </div>
-
-      <div class="control-group">
-        <label class="control-label">单价</label>
-
-        <div class="controls">
-          <input name="fee.unitPrice" type="number" step="any" class="input-mini" value="1">
-        </div>
-      </div>
-
-      <div class="control-group">
-        <label class="control-label">数量</label>
-
-        <div class="controls">
-          <input name="fee.unitQty" type="number" step="any" class="input-mini" value="1">
-        </div>
-      </div>
-
-      <div class="control-group">
-        <label class="control-label">总价</label>
-
-        <div class="controls">
-          <input type="number" step="any" class="input-mini amount" value="0" readonly>
-        </div>
-      </div>
-
-      <div class="control-group">
-        <label class="control-label">计费方式</label>
-
-        <div class="controls">
-          <select name="fee.chargingWay" class="input-small">
-          #{list items:models.finance.PaymentUnit.W.values(), as:'way'}
-            <option value="${way}">${way.label()}</option>
-          #{/list}
-          </select>
-        </div>
-      </div>
-
-      <div class="control-group">
-        <label class="control-label">费用关系人</label>
-
-        <div class="controls">
-          <select name="fee.cooperator.id" class="input-small">
-          #{list items:cooperators, as:'cooper'}
-            <option ${ship?.cooper == cooper ? 'selected' : ''}  value="${cooper.id}">${cooper.name}</option>
-          #{/list}
-          </select>
-        </div>
-      </div>
-
-      <div class="control-group">
-        <label class="control-label">备注</label>
-
-        <div class="controls">
-          <textarea role="5" name="fee.memo" class="span11"></textarea>
-        </div>
-      </div>
-    </div>
-    <div class="modal-footer">
-      <a href="#" class="btn" data-dismiss="modal">Close</a>
-      <button class="btn btn-primary" data-disable-with="更新中..." data-confirm="确认操作?">
-        添加
-      </button>
-    </div>
-  </form>
+  </div>
 </script>
